hbase: migrate, refactor conf and dependencies